[package]
name = "iterum-rust"
version = "0.1.0"
authors = ["Mark <marktmmrmn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.1", features = ["derive"] }
serde_json = "1.0"
